# muat

./: .gitattributes  Dockerfile  LICENSE  MANIFEST.in  README.md  README_GEL.md  README_MuAtTraining.md  README_PCAWG.md  README_preprocessing.md  build_docker.sh  environment.yml  environment_manual.yml  main.nf  muat-env-osx.yml  muat-env.yml  nextflow.config  pyproject.toml  run_nextflow.sh  setup.py  setup_benchmark.py  setup_ican.py  setup_raw.py
bioconda-recipe/: meta.yaml
conda-recipe/: meta.yaml
documentation/: README_GEL.md  README_MuAtTraining.md  README_PCAWG.md  README_download.md  README_preprocessing.md
example_files/: 0a6be23a-d5a0-4e95-ada2-a61b2b5d9485.muat.tsv  ensemble_prediction.tsv  label1_example.tsv  label2_example.tsv  predict_vcf_hg19_example.tsv  predict_vcf_hg38_example.tsv  train_split_2labels_example.tsv  train_split_example.tsv  trainmuat_log.out  val_split_2labels_example.tsv  val_split_example.tsv
extfile/: dictChpos.tsv  dictGES.tsv  dictMutation.tsv
muat/: __init__.py  checkpoint.py  core.py  dataloader.py  download.py  model.py  predict.py  preprocessing.py  reader.py  trainer.py  util.py
tests/: __init__.py  download_pcawg.py  muat1_direct_inference.py  muat1_pretrained_inference.py  muat1_pretrained_inference_hg38.py  muat1_training_validation.py  preprocessing_somagg.py  preprocessing_vcf_hg19.py  preprocessing_vcf_hg38.py  quick_direct_inference.py  quick_predict_atlas.py  quick_pretrained_inference.py  quick_pretrained_inference_hg38.py  quick_test.py  quick_training_validation.py  quick_trainval_atlas.py  test_core.py
(+29 files in other folders)
