[project]
name = "muat"  # replace with your actual project name
version = "0.1.7"  # replace with your version
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
muat = "muat.core:main"

[tool.setuptools]
packages = ["muat"]